tests/ui-nightly/transmute-size-decrease.stderr
error[E0080]: evaluation of `<[u8; 1] as zerocopy::TransmuteFrom<[u8; 2]>>::IS_TRANSMUTABLE` failed
 --> src/lib.rs
  |
  |         assert!(mem::size_of::<Src>() == mem::size_of::<Dst>());
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'assertion failed: mem::size_of::<Src>() == mem::size_of::<Dst>()', $DIR/src/lib.rs:1427:9
  |
  = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
    --> src/lib.rs
     |
     |     assert!(<Dst as TransmuteFrom<Src>>::IS_TRANSMUTABLE);
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
